--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ main {
 }
 
 header {
-    margin: 64px;
+    margin-top: 16px;
     padding-bottom: 24px;
     border-bottom: 1px solid #334155;
 }
@@ -111,7 +111,9 @@ input:checked:before {
     border-radius: 50%;
 }
 
-
+input:hover{
+    cursor: pointer;
+}
 
 
 #acertos {
